2006-06-20  Paolo Borelli  <pborelli@katamail.com>

	* src/cpufreq-applet.c: do not leak GList.

2006-08-17  Saleem Abdulrasool  <compnerd@gentoo.org>

	* src/cpufreq-selector/Makefile.am:

	Ensure cpufreq-selector is built without lazy bindings. Fixes bug
	#351695

2006-08-09  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-monitor-cpuinfo.c:
	* src/cpufreq-monitor-libcpufreq.c:
	* src/cpufreq-monitor-procfs.c:
	* src/cpufreq-monitor-sysfs.c:
	* src/cpufreq-utils.c:

	Reduce the number of files read each second. Use a custom version of
	g_file_get_contents since it seems it's a bit overkill. Fixes bug
	#349264

2006-06-17  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-monitor-factory.h:
	* src/cpufreq-monitor-procfs.h:
	* src/cpufreq-monitor-sysfs.h:
	* src/cpufreq-monitor.h:
	* src/cpufreq-selector/cpufreq-selector-procfs.h:
	* src/cpufreq-selector/cpufreq-selector-sysfs.h:
	Added missing G_BEGIN_DECLS and G_END_DECLS

	* src/cpufreq-selector/Makefile.am:
	* src/cpufreq-selector/cpufreq-selector-libcpufreq.[ch]: Added
	* src/cpufreq-selector/main.c: 

	Use libcpufreq also in cpufreq-selector when available. Fixes bug
	#159119

2006-06-17  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-monitor.c: code cleanups
	
	* src/cpufreq-selector/Makefile.am:
	* src/cpufreq-selector/cpufreq-selector-procfs.[ch]:
	* src/cpufreq-selector/cpufreq-selector-sysfs.[ch]:
	* src/cpufreq-selector/cpufreq-selector.[ch]:
	* src/cpufreq-selector/main.c:

	Rework cpufreq-selector. Fixes bugs #344393, #344400.

2006-06-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am:
	* src/cpufreq-monitor-factory.c:
	* src/cpufreq-monitor-libcpufreq.[ch]: Added

	Use libcpufreq when available

2006-06-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* Makefile.am: Don't install gconf schemas when
	--disable-schemas-install is used. Fixes bug #344102

2006-06-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am: