@@ -1,3 +1,9 @@
+2006-08-21  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* src/cpufreq-applet.c: 
+
+	Use new icon in about dialog. 
+
 2006-06-20  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/cpufreq-applet.c: do not leak GList.
